[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/LevelWrapper.gd" type="Script" id=1]

[node name="LevelWrapper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FighterHealth" type="ProgressBar" parent="."]
margin_left = 9.0
margin_top = 568.0
margin_right = 433.0
margin_bottom = 593.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BomberHealth" type="ProgressBar" parent="."]
margin_left = 606.0
margin_top = 570.0
margin_right = 1008.0
margin_bottom = 595.0
value = 100.0
